# Real-Harmonium

./: LICENSE  README.md  install.sh  pyproject.toml  setup.py
debian/: changelog  control  files
realharmonium/: __init__.py  __main__.py  sound_engine.py  tilt_engine.py  ui.py
scripts/: build_deb.sh  install.sh
