[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realharmonium"
version = "1.0.0"
description = "A tilt-controlled harmonium instrument for the Linux terminal"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.21",
    "pygame>=2.0",
]

[project.optional-dependencies]
evdev = ["evdev>=1.4"]

[project.scripts]
realhm = "realharmonium.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["realharmonium*"]
